# youtube-rag-assistant

./: main.py  pyproject.toml  youtube_processor.py
chroma_db/: chroma.sqlite3
